--- a/less/header.less
+++ b/less/header.less
@@ -145,7 +145,7 @@
 					.form-control {
 						height: 35px;
 						color: @cbf-light-grey;
-						border-color: @cbf-dark-blue;
+						border-color: lighten(@cbf-dark-blue, 15%);
 						float: right;
 						width: 100%;
 					}
