--- a/less/content.less
+++ b/less/content.less
@@ -56,7 +56,7 @@
 
 	.block-views .block-panel {
 		.panel;
-		.panel-variant(@cbf-content-blue; @cbf-dark-blue; @cbf-content-blue; @cbf-content-blue);
+		.panel-variant(darken(@cbf-content-blue, 15%); @cbf-dark-blue; @cbf-content-blue; @cbf-content-blue);
 
 		margin-bottom: 25px;
 
@@ -81,7 +81,7 @@
 
 	.block-block .block-panel {
 		.panel;
-		.panel-variant(@cbf-content-blue; @cbf-dark-blue; @cbf-content-blue; @cbf-content-blue);
+		.panel-variant(darken(@cbf-content-blue, 15%); @cbf-dark-blue; @cbf-content-blue; @cbf-content-blue);
 
 		margin-bottom: 25px;
 
@@ -357,7 +357,7 @@
 		.form-control,
 		.btn {
 			height: 42px;
-			border-color: @cbf-content-blue;
+			border-color: darken(@cbf-content-blue, 15%);
 		}
 
 		.btn {
