--- a/css/style.css
+++ b/css/style.css
@@ -9370,6 +9370,17 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
 .sidebar-2-region .block-block .block-panel .field-content h3 {
   padding-left: 0;
 }
+.content-region .block-views .block-panel,
+.sidebar-1-region .block-views .block-panel,
+.sidebar-2-region .block-views .block-panel,
+.content-region .block-system .block-panel,
+.sidebar-1-region .block-system .block-panel,
+.sidebar-2-region .block-system .block-panel {
+  /*
+			 * Empty views can be nested if a view invokes another view when empty.
+			 * Don't pad nested empty views.
+			 */
+}
 .content-region .block-views .block-panel .view-national-library .view-header,
 .sidebar-1-region .block-views .block-panel .view-national-library .view-header,
 .sidebar-2-region .block-views .block-panel .view-national-library .view-header,
@@ -9685,6 +9696,12 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
 .content-region .block-system .block-panel .view-content,
 .sidebar-1-region .block-system .block-panel .view-content,
 .sidebar-2-region .block-system .block-panel .view-content,
+.content-region .block-views .block-panel .view-empty,
+.sidebar-1-region .block-views .block-panel .view-empty,
+.sidebar-2-region .block-views .block-panel .view-empty,
+.content-region .block-system .block-panel .view-empty,
+.sidebar-1-region .block-system .block-panel .view-empty,
+.sidebar-2-region .block-system .block-panel .view-empty,
 .content-region .block-views .block-panel .views-exposed-form,
 .sidebar-1-region .block-views .block-panel .views-exposed-form,
 .sidebar-2-region .block-views .block-panel .views-exposed-form,
@@ -9693,6 +9710,14 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
 .sidebar-2-region .block-system .block-panel .views-exposed-form {
   padding: 10px;
   padding-top: 0;
+}
+.content-region .block-views .block-panel .view-empty .view-empty,
+.sidebar-1-region .block-views .block-panel .view-empty .view-empty,
+.sidebar-2-region .block-views .block-panel .view-empty .view-empty,
+.content-region .block-system .block-panel .view-empty .view-empty,
+.sidebar-1-region .block-system .block-panel .view-empty .view-empty,
+.sidebar-2-region .block-system .block-panel .view-empty .view-empty {
+  padding: 0;
 }
 .content-region .block-views .block-panel .views-exposed-form .views-exposed-widget,
 .sidebar-1-region .block-views .block-panel .views-exposed-form .views-exposed-widget,
