--- a/less/content.less
+++ b/less/content.less
@@ -256,9 +256,18 @@
 			}
 
 			.view-content,
+			.view-empty,
 			.views-exposed-form {
 				padding: 10px;
 				padding-top: 0;
+			}
+
+			/*
+			 * Empty views can be nested if a view invokes another view when empty.
+			 * Don't pad nested empty views.
+			 */
+			.view-empty .view-empty {
+				padding: 0;
 			}
 
 			.views-exposed-form {
