--- a/css/style.css
+++ b/css/style.css
@@ -9791,6 +9791,7 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
   font-size: 22px;
   float: left;
   clear: left;
+  margin-top: 0;
   margin-left: -50px;
 }
 .content-region .block-views .block-panel .views-field.views-field-field-is-audio small,
