Set margin on is-audio, is-video and is-text fields

--- a/less/content.less
+++ b/less/content.less
@@ -296,8 +296,7 @@
 					.h1;
 					float: left;
 					clear: left;
-					margin-top: 0;
-					margin-left: -50px;
+					margin: 0 0 5px -50px;
 				}
 
 				&.views-field-field-short-form,
