--- a/css/style.css
+++ b/css/style.css
@@ -9791,8 +9791,7 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
   font-size: 22px;
   float: left;
   clear: left;
-  margin-top: 0;
-  margin-left: -50px;
+  margin: 0 0 5px -50px;
 }
 .content-region .block-views .block-panel .views-field.views-field-field-is-audio small,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-is-audio small,
