--- a/less/header.less
+++ b/less/header.less
@@ -251,6 +251,10 @@
 					left: 60%;
 					width: 40%;
 				}
+				@media @normal {
+					left: 70%;
+					width: 30%;
+				}
 				@media @wide {
 					left: 50%;
 					width: 50%;
@@ -276,8 +280,11 @@
 								width: 100%;
 								margin-bottom: 180px;
 							@media @tablet {
-								width: 60%;
+								width: 396px;
 								margin-bottom: 0;
+							}
+							@media @normal {
+								width: 605px;
 							}
 							@media @wide {
 								width: 50%;
@@ -308,6 +315,11 @@
 							top: 5%;
 							left: 60%;
 							padding: 0 10% 30px 5%;
+						}
+						@media @normal {
+							top: 10%;
+							left: 70%;
+							padding: 0 5% 30px 2%;
 						}
 						@media @wide {
 							top: 15%;
