--- a/less/overrides.less
+++ b/less/overrides.less
@@ -1,3 +1,7 @@
+// Bootstrap variables.
+// variables.less has already been included by bootstrap.less
+// @import 'variables.less';
+
 // Media query variables.
 @tablet:  ~"screen and (min-width: @{screen-sm-min})";
 @normal:  ~"screen and (min-width: @{screen-md-min})";
