--- a/css/editor.css
+++ b/css/editor.css
@@ -2,8 +2,22 @@
 
 .cke_editable,
 .cke_show_borders {
-	font-family: "Open Sans",​Helvetica,​Arial,​sans-serif !important;
-	line-height: normal !important;
-	padding: 10px;
-	max-width: 640px;
+  font-family: "Open Sans",​Helvetica,​Arial,​sans-serif !important;
+  line-height: normal !important;
+  padding: 10px;
+  max-width: 640px;
+}
+
+.cke_show_borders table.cke_show_border,
+.cke_show_borders table.cke_show_border > tr > td,
+.cke_show_borders table.cke_show_border > tr > th,
+.cke_show_borders table.cke_show_border > tbody > tr > td,
+.cke_show_borders table.cke_show_border > tbody > tr > th,
+.cke_show_borders table.cke_show_border > thead > tr > td,
+.cke_show_borders table.cke_show_border > thead > tr > th,
+.cke_show_borders table.cke_show_border > tfoot > tr > td,
+.cke_show_borders table.cke_show_border > tfoot > tr > th {
+  border-color: #cc0 !important;
+  border-style: dashed !important;
+  border-width: 1px 0 !important;
 }
