--- a/css/style.css
+++ b/css/style.css
@@ -9934,6 +9934,14 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
 .sidebar-2-region .block-system .block-panel .views-exposed-form .views-exposed-widget {
   margin: 10px 10px 0 0;
 }
+.content-region .block-views .block-panel .views-row,
+.sidebar-1-region .block-views .block-panel .views-row,
+.sidebar-2-region .block-views .block-panel .views-row,
+.content-region .block-system .block-panel .views-row,
+.sidebar-1-region .block-system .block-panel .views-row,
+.sidebar-2-region .block-system .block-panel .views-row {
+  clear: left;
+}
 .content-region .block-views .block-panel .views-field,
 .sidebar-1-region .block-views .block-panel .views-field,
 .sidebar-2-region .block-views .block-panel .views-field,
