--- a/css/style.css
+++ b/css/style.css
@@ -8539,6 +8539,7 @@ table .checkbox input[type="checkbox"] {
   text-align: center;
   background-color: #777777;
   border-radius: 10px;
+  margin-top: 30px;
   background-color: #d8eaf9;
 }
 .content-region .block-views .block-panel .more-link:empty {
@@ -9121,6 +9122,7 @@ a.content-region .block-views .block-panel .more-link:focus {
   text-align: center;
   background-color: #777777;
   border-radius: 10px;
+  margin-top: 30px;
   background-color: #02426f;
 }
 .sidebar-1-region .block-views .block-panel .more-link:empty,
@@ -9541,28 +9543,65 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
 .sidebar-2-region .block-block .block-panel .block-title i + .title-text {
   margin-left: 60px;
 }
-.content-region .block-views .block-panel h3 i,
-.sidebar-1-region .block-views .block-panel h3 i,
-.sidebar-2-region .block-views .block-panel h3 i,
-.content-region .block-system .block-panel h3 i,
-.sidebar-1-region .block-system .block-panel h3 i,
-.sidebar-2-region .block-system .block-panel h3 i,
-.content-region .block-block .block-panel h3 i,
-.sidebar-1-region .block-block .block-panel h3 i,
-.sidebar-2-region .block-block .block-panel h3 i {
-  float: left;
-  width: 35px;
+.content-region .block-views .block-panel .view-header,
+.sidebar-1-region .block-views .block-panel .view-header,
+.sidebar-2-region .block-views .block-panel .view-header,
+.content-region .block-system .block-panel .view-header,
+.sidebar-1-region .block-system .block-panel .view-header,
+.sidebar-2-region .block-system .block-panel .view-header,
+.content-region .block-block .block-panel .view-header,
+.sidebar-1-region .block-block .block-panel .view-header,
+.sidebar-2-region .block-block .block-panel .view-header {
+  margin-bottom: 30px;
 }
-.content-region .block-views .block-panel h3 i + .title-text,
-.sidebar-1-region .block-views .block-panel h3 i + .title-text,
-.sidebar-2-region .block-views .block-panel h3 i + .title-text,
-.content-region .block-system .block-panel h3 i + .title-text,
-.sidebar-1-region .block-system .block-panel h3 i + .title-text,
-.sidebar-2-region .block-system .block-panel h3 i + .title-text,
-.content-region .block-block .block-panel h3 i + .title-text,
-.sidebar-1-region .block-block .block-panel h3 i + .title-text,
-.sidebar-2-region .block-block .block-panel h3 i + .title-text {
-  margin-left: 35px;
+.content-region .block-views .block-panel .views-row + h3,
+.sidebar-1-region .block-views .block-panel .views-row + h3,
+.sidebar-2-region .block-views .block-panel .views-row + h3,
+.content-region .block-system .block-panel .views-row + h3,
+.sidebar-1-region .block-system .block-panel .views-row + h3,
+.sidebar-2-region .block-system .block-panel .views-row + h3,
+.content-region .block-block .block-panel .views-row + h3,
+.sidebar-1-region .block-block .block-panel .views-row + h3,
+.sidebar-2-region .block-block .block-panel .views-row + h3 {
+  margin-top: 30px;
+  border-top: 1px solid #036fba;
+  padding-top: 15px;
+}
+.content-region .block-views .block-panel .view-content > h3,
+.sidebar-1-region .block-views .block-panel .view-content > h3,
+.sidebar-2-region .block-views .block-panel .view-content > h3,
+.content-region .block-system .block-panel .view-content > h3,
+.sidebar-1-region .block-system .block-panel .view-content > h3,
+.sidebar-2-region .block-system .block-panel .view-content > h3,
+.content-region .block-block .block-panel .view-content > h3,
+.sidebar-1-region .block-block .block-panel .view-content > h3,
+.sidebar-2-region .block-block .block-panel .view-content > h3 {
+  margin-bottom: 30px;
+  color: #036fba;
+}
+.content-region .block-views .block-panel .view-content > h3 i,
+.sidebar-1-region .block-views .block-panel .view-content > h3 i,
+.sidebar-2-region .block-views .block-panel .view-content > h3 i,
+.content-region .block-system .block-panel .view-content > h3 i,
+.sidebar-1-region .block-system .block-panel .view-content > h3 i,
+.sidebar-2-region .block-system .block-panel .view-content > h3 i,
+.content-region .block-block .block-panel .view-content > h3 i,
+.sidebar-1-region .block-block .block-panel .view-content > h3 i,
+.sidebar-2-region .block-block .block-panel .view-content > h3 i {
+  float: left;
+  font-size: 39px;
+  line-height: 50px;
+}
+.content-region .block-views .block-panel .view-content > h3 i + .title-text,
+.sidebar-1-region .block-views .block-panel .view-content > h3 i + .title-text,
+.sidebar-2-region .block-views .block-panel .view-content > h3 i + .title-text,
+.content-region .block-system .block-panel .view-content > h3 i + .title-text,
+.sidebar-1-region .block-system .block-panel .view-content > h3 i + .title-text,
+.sidebar-2-region .block-system .block-panel .view-content > h3 i + .title-text,
+.content-region .block-block .block-panel .view-content > h3 i + .title-text,
+.sidebar-1-region .block-block .block-panel .view-content > h3 i + .title-text,
+.sidebar-2-region .block-block .block-panel .view-content > h3 i + .title-text {
+  margin-left: 60px;
 }
 .content-region .block-views .block-panel td,
 .sidebar-1-region .block-views .block-panel td,
@@ -10092,7 +10131,7 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
 .content-region .block-system .block-panel .more-link,
 .sidebar-1-region .block-system .block-panel .more-link,
 .sidebar-2-region .block-system .block-panel .more-link {
-  margin: 0 0 10px 10px;
+  margin: 30px 0 10px 10px;
 }
 .content-region .block-views .block-panel .more-link a,
 .sidebar-1-region .block-views .block-panel .more-link a,
