--- a/less/content.less
+++ b/less/content.less
@@ -184,6 +184,7 @@
 					float: left;
 					font-size: 39px;	// Make the icon the same size as the thumbnail
 					line-height: 50px;	// namely 50x50 pixels
+					margin-bottom: (@grid-gutter-width/2);
 				}
 
 				i + .title-text {
