--- a/css/style.css
+++ b/css/style.css
@@ -9625,17 +9625,6 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
   vertical-align: top;
   padding: 5px;
 }
-.content-region .block-views .block-panel .field-content h3,
-.sidebar-1-region .block-views .block-panel .field-content h3,
-.sidebar-2-region .block-views .block-panel .field-content h3,
-.content-region .block-system .block-panel .field-content h3,
-.sidebar-1-region .block-system .block-panel .field-content h3,
-.sidebar-2-region .block-system .block-panel .field-content h3,
-.content-region .block-block .block-panel .field-content h3,
-.sidebar-1-region .block-block .block-panel .field-content h3,
-.sidebar-2-region .block-block .block-panel .field-content h3 {
-  padding-left: 0;
-}
 .content-region .block-views .block-panel .view-national-library .view-header,
 .sidebar-1-region .block-views .block-panel .view-national-library .view-header,
 .sidebar-2-region .block-views .block-panel .view-national-library .view-header,
@@ -10153,6 +10142,16 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
 .sidebar-2-region .block-block .block-panel .block-title {
   margin-left: -10px;
   margin-right: -10px;
+}
+.content-region .block-block .block-panel > h3 i,
+.sidebar-1-region .block-block .block-panel > h3 i,
+.sidebar-2-region .block-block .block-panel > h3 i {
+  float: left;
+}
+.content-region .block-block .block-panel > h3 i + .title-text,
+.sidebar-1-region .block-block .block-panel > h3 i + .title-text,
+.sidebar-2-region .block-block .block-panel > h3 i + .title-text {
+  margin-left: 30px;
 }
 .content-region .block-system .block-panel .search-form,
 .sidebar-1-region .block-system .block-panel .search-form,
