--- a/less/common.less
+++ b/less/common.less
@@ -4,11 +4,15 @@
 .view {
 
   /*
-   * Empty views can be nested if a view invokes another view when empty.
+   * Views can be nested if a view is empty and invokes another view.
    * Don't pad nested empty views.
    */
-  .view-empty .view-empty {
-    padding: 0;
+  .view-empty {
+    .view-content,
+    .view-empty,
+    .views-exposed-form {
+      padding: 0 !important;
+    }
   }
 }
 
